@@ -1,3 +1,3 @@
 #define TE_SYMBIAN 1
-#include "obj-elf.h"
 
+#include "te-armeabi.h"
