@@ -110,12 +110,12 @@ case ${generic_target} in
   arm-*-coff | thumb-*-coff)		fmt=coff ;;
   arm-*-rtems* | thumb-*-rtems*)	fmt=elf ;;
   arm-*-elf | thumb-*-elf)		fmt=elf ;;
-  arm-*-eabi*)				fmt=elf ;;
+  arm-*-eabi*)				fmt=elf em=armeabi ;;
   arm-*-symbianelf*)			fmt=elf em=symbian ;;
   arm-*-kaos*)				fmt=elf ;;
   arm-*-conix*)				fmt=elf ;;
   arm-*-linux*aout*)			fmt=aout em=linux ;;
-  arm-*-linux-gnueabi*)			fmt=elf  em=armlinuxeabi ;;	 
+  arm-*-linux-gnueabi*)			fmt=elf  em=armlinuxeabi ;;
   arm-*-linux-gnu*)			fmt=elf  em=linux ;;
   arm-*-uclinux*)			fmt=elf  em=linux ;;
   arm-*-netbsdelf*)                 	fmt=elf  em=nbsd ;;
